--- a/1-screening.tex
+++ b/1-screening.tex
@@ -319,6 +319,7 @@ The role of a dispatchable source of low-carbon energy can only be fulfilled by 
 
 \begin{figure}[ht]
   \includegraphics[width=0.42\textwidth]{figures/1-screening/Kr_treatment.jpg}
+  \hfill
   \includegraphics[width=0.55\textwidth]{figures/1-screening/MSR_noble_gas.jpg}
   \caption{Representation of xenon/krypton separation process using porous materials in a nuclear fuel reprocessing plant and in a molten salt reactor. Reprinted with permission from Ref.~\cite{Banerjee_2014} copyright \copyright\ 2014 American Chemical Society and Ref.~\cite{Riley_2019} copyright \copyright\ 2019 Elsevier.}\label{fgr:industrial}
 \end{figure}
