--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -324,6 +324,7 @@ Furthermore, in the optimization of either xenon uptake or Xe/Kr selectivity, it
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_sa.pdf}
+  \hfill
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_sa_selectivity.pdf}
   \caption{On the left: scatterplot of the xenon uptake as a function of the selectivity and labeled by the values of the surface area. On the right: scatterplot of the selectivity and the surface area labeled by the quantity of xenon adsorbed. The selectivity and uptake are calculated by a GCMC simulation of a 20:80 Xe/Kr mixture.}\label{fgr:sa}
 \end{figure}
@@ -334,6 +335,7 @@ The 3D histogram on Figure~\ref{fgr:3D_hist_sa_vol} provides a visual representa
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth,trim={2cm 0 2cm 2cm},clip]{figures/2-thermo/3D_hist_selec_SA.pdf}
+  \hfill
   \includegraphics[width=0.48\textwidth,trim={2cm 0 2cm 2cm},clip]{figures/2-thermo/3D_hist_selec_vol.pdf}
   \caption{3D histograms of in a bidimensional space formed by the Xe/Kr selectivity and the surface areas (on the left) and formed by the Xe/Kr selectivity and the pore void fractions (on the right). A base 10 logarithm has been applied to the selectivity values. Bin size increased by 2.4 (on log scale) for the selectivity, by about $500$~\si{\square\meter\cubic\centi\meter} for the surface areas and by $0.125$ for the void fraction. }\label{fgr:3D_hist_sa_vol}
 \end{figure}
@@ -345,6 +347,7 @@ A similar analysis for void fraction was also conducted by Wilmer et al. for met
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_vol.pdf}
+  \hfill
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_vol_selectivity.pdf}
   \caption{On the left: scatterplot of the xenon uptake as a function of the selectivity and labeled by the values of the void fraction. On the right: scatterplot of the selectivity and the void fraction labeled by the quantity of xenon adsorbed. The selectivity and uptake are calculated by a GCMC simulation of a 20:80 Xe/Kr mixture.}\label{fgr:vol}
 \end{figure}
@@ -358,6 +361,7 @@ The optimal pore size for xenon/krypton separation can be deduced from Figure~\r
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd.pdf}
+  \hfill
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd_zoom.pdf}
   \caption{Scatterplot of the xenon uptake as a function of the selectivity (20:80) and labeled by the values of LCD\e{UFF} (left). The same scatterplot restricted to values of D$_i$ between ($3.6$ and $11.6$~\si{\angstrom}) and labeled using a different color code to distinguish the most selective materials from the least selective ones. The most selective materials are colored in orange corresponding to a pore size adapted for xenon adsorption (around $5$~\si{\angstrom}). The least selective ones are in green, with a pore lower than the size of a xenon hence preventing its adsorption.}\label{fgr:lcd}
 \end{figure}
@@ -367,6 +371,7 @@ The joint effects of void fraction and largest cavity diameter (D$_i$) on select
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_vf_lcd_selectivity.pdf}
+  \hfill
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_vf_lcd_selectivity_zoom.pdf}  
   \caption{Scatterplots of the void fraction as a function of the LCD\e{UFF} and labeled by the log$_{10}$ of the selectivity values. On the left, only the materials with a selectivity between $10$ and $40$ are considered; and on the right, selectivity values over $40$.}\label{fgr:lcd_vf}
 \end{figure}
@@ -392,7 +397,8 @@ The effect of the composition on the different analyses of the different structu
 
 \begin{figure}[ht!]
   \centering
-  \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_vol_9010.pdf}  
+  \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_vol_9010.pdf} 
+  \hfill 
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_vf_lcd_selectivity9010.pdf}
   \caption{Illustration of the effect of the composition by representing the same figures as in~\ref{fgr:vol} and~\ref{fgr:lcd_vf} but for a 90:10 composition. On the left: scatterplot of the xenon uptake as a function of the selectivity ($s\e{1}(90:10)$) and labeled by the values of the void fraction. On the right: scatterplots of the void fraction as a function of the LCD\e{UFF} and labeled by the selectivity ($s\e{1}(90:10)$) values superior to $10$ in log-scale.}\label{fgr:compo}
 \end{figure}
@@ -461,8 +467,9 @@ In the analysis of the influence of the pore size and void fraction on the entro
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.4\textwidth]{figures/2-thermo/Scatterplot_entropy_lcd.pdf}
-  \includegraphics[width=0.4\textwidth]{figures/2-thermo/Scatterplot_entropy_vf.pdf}
+  \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_entropy_lcd.pdf}
+  \hfill
+  \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_entropy_vf.pdf}
   \caption{Comparison plots of the entropic term $T\Delta\e{ads}S\ex{Xe}\e{0}$ at infinite dilution and two geometric descriptors: the LCD\e{UFF} (left) and the void fraction (right).}\label{fgr:entropy_geometry}
 \end{figure}
 
