--- a/remerciements.tex
+++ b/remerciements.tex
@@ -1,13 +1,78 @@
 %!TEX root = A-web.tex
 %!TeX spellcheck = fr-FR
-% Nicolas Castel PhD thesis -- (C) 2023
-
 \begin{otherlanguage}{french}
 
 % Chapter-style header without adding to the TOC
 \hrule\relax
 \vspace*{.9\baselineskip}%
 \raggedright{\huge\spacedallcaps{Remerciements}}\par%
+\vspace*{1.1\baselineskip}%
+\hrule\relax
+\vspace*{\baselineskip}%
+\thispagestyle{empty}
+
+\begingroup
+\itshape
+
+Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sofia Calero et Magali Benoit d'avoir accepter de prendre le temps de lire, ce manuscrit de thèse et d'avoir 
+\todo{Jury}
+\todo{Examinateur}
+
+\todo{Philippe Guilbaud}
+
+\todo{Isabelle Hablot}
+
+\todo{François-Xavier Coudert}
+
+Ces années n'auront pas été si riches sans la présence des membres de l'équipe:
+
+\todo{PSL}
+
+\todo{Lionel, algo}
+
+\todo{Dabeen, relecture}
+
+\todo{gestionnaire CEA IRCP}
+
+\endgroup
+
+\clearpage
+\mbox{}
+\thispagestyle{empty}
+\clearpage
+
+%\ifweb
+%
+%\mbox{}\vfill
+%\thispagestyle{empty}
+%
+%Copyright © 2019 Guillaume Fraux
+%
+%This document is distributed under a Creative Common license CC-BY-SA-NC 4.0
+%(Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International).
+%
+%See \url{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode} for the
+%full text of the license.
+%
+%\begin{center}
+%    \includegraphics[width=15em]{figures/images/by-nc-sa-eu.png}
+%\end{center}
+%
+%\clearpage
+%\mbox{}
+%\thispagestyle{empty}
+%\clearpage
+%
+%\fi
+
+\end{otherlanguage}
+
+\begin{otherlanguage}{english}
+
+% Chapter-style header without adding to the TOC
+\hrule\relax
+\vspace*{.9\baselineskip}%
+\raggedright{\huge\spacedallcaps{Acknowledgements}}\par%
 \vspace*{1.1\baselineskip}%
 \hrule\relax
 \vspace*{\baselineskip}%
@@ -67,3 +132,4 @@ Ces années n'auront pas été si riches sans la présence des membres de l'équ
 %\fi
 
 \end{otherlanguage}
+    
